--- a/index.html
+++ b/index.html
@@ -3,11 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Praticando</title>
+    <title>Museum The Flash</title>
     <link rel="stylesheet" href="style.css">
 </head>    
 
 <body>
+
+     <h1>O <span class="destaque">Flash</span></h1>
+  <p>
+    O <span class="destaque">Flash</span> é conhecido como o homem mais rápido do mundo.
+    Quando o <span class="destaque">Barry Allen</span> corre, o tempo parece parar!
+  </p>
+    
     <header>
         <span style="font-weight: bold; font-size: 2.5rem;">Museum The Flash</span>
         <img logo width="100" height="100" src="https://img.icons8.com/plasticine/100/lightning-bolt--v1.png" alt="lightning-bolt--v1"/>
@@ -101,4 +108,5 @@
         <p>&copy; 2025 Museum The Flash</p>
     </footer>
 </body>
+
 </html>
