--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 
 <body>
 
-     <h1>O <span class="destaque">Flash</span></h1>
+    <body> 
+
+    <h1>O <span class="destaque">Flash</span></h1>
   <p>
     O <span class="destaque">Flash</span> é conhecido como o homem mais rápido do mundo.
     Quando o <span class="destaque">Barry Allen</span> corre, o tempo parece parar!
@@ -95,6 +97,7 @@
                     <option value="Barry Allen">Barry Allen</option>
                     <option value="Wally West">Wally West</option>
                     <option value="Jay Garrick">Jay Garrick</option>
+                </body>
                 </select>
             </form>
         </section>
@@ -110,3 +113,4 @@
 </body>
 
 </html>
+
