--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
 
-    <body> 
+    <body class="container"> 
 
     <h1>O <span class="destaque">Flash</span></h1>
   <p>
@@ -113,4 +113,5 @@
 </body>
 
 </html>
+
 
