--- a/index.html
+++ b/index.html
@@ -3,18 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Museum The Flash</title>
-    <link rel="stylesheet" href="style.css">
-</head>    
-
+    <title>O Flash</title>
+  <link rel="stylesheet" href="style.css">
+</head>
 <body>
-
-    <body> 
-
-    <h1>The <span class="destaque">Flash</span></h1>
+  <h1>O <span class="flash">Flash</span></h1>
   <p>
-    The <span class="destaque">Flash</span> é conhecido como o homem mais rápido do mundo.
-    Quando o <span class="destaque">Barry Allen</span> corre, o tempo parece parar!
+    O <span class="flash">Flash</span> é conhecido como o homem mais rápido do mundo.
+    Quando <span class="flash">Barry Allen</span> corre, o tempo parece parar!
   </p>
     
     <header>
@@ -115,6 +111,7 @@
 </body>
 
 </html>
+
 
 
 
